# AvDriver

./: .gitignore  CMakeLists.txt  README.md  opcuaclient.h
build-src-Desktop-Debug/: AvDriver  AvDriver.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  configs.txt  devices.txt
build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-82e504fe80c0a79de4ee.json  cmakeFiles-v1-c95012af0f08188b9c00.json  codemodel-v2-458dbd28b72681c28d1c.json  index-2025-04-24T04-45-32-0170.json  target-AvDriver-Debug-65927891d2f416ee6e79.json
include/: industrialprotocolutils.h  log_duration.h  modbustcpclient.h  opcuaclient.h  socket.h  variable.h
resources/: AvDriver.xml  devices.txt
src/: CMakeLists.txt  industrialprotocolutils.cpp  industrialprotocolutils.h  main.cpp  modbustcpclient.cpp  modbustcpclient.h  opcuaclient.cpp  opcuaclient.h  rtm64var.cpp  rtm64var.h  socket.cpp  variable.cpp
